# podking

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  nixpacks.toml  pyproject.toml  railpack.json  railway.toml
.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_episodes_jobs_summaries_subscriptions.py
backend/podking/: auth.py  config.py  crypto.py  db.py  deps.py  logging.py  main.py  models.py  pubsub.py  scheduler.py  schemas.py
backend/podking/api/: events.py  health.py  jobs.py  me.py  search.py  settings.py  subscriptions.py  summaries.py  tags.py
backend/podking/repositories/: users.py
backend/podking/worker/: claude_client.py  elevenlabs_client.py  podcast.py  runner.py  voyage_client.py  youtube.py
docs/superpowers/plans/: 2026-04-22-plan-1-spine.md
docs/superpowers/specs/: 2026-04-22-podking-design.md
frontend/: components.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx
frontend/src/hooks/: useJobProgress.ts  useMe.ts
frontend/src/pages/: Home.tsx  Login.tsx  Search.tsx  Settings.tsx  Subscriptions.tsx  SummaryDetail.tsx
scripts/: setup-local-db.sh
tests/: conftest.py  test_auth.py  test_crypto.py  test_current_user.py  test_health.py  test_jobs.py  test_me.py  test_models.py  test_settings.py  test_subscriptions.py  test_users_repo.py  test_worker_url_parsing.py
